# box

./: .gitattributes  CLAUDE.md  Cargo.toml  LICENSE-THIRD-PARTY.md  README.md  install.ps1
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v2.0-REQUIREMENTS.md  v2.0-ROADMAP.md
.planning/milestones/v1.0-phases/01-foundation-flatten/: 01-01-SUMMARY.md  01-CONTEXT.md  01-REVIEW.md
.planning/milestones/v1.0-phases/02-pure-transform-utilities/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-SUMMARY.md  02-03-PLAN.md  02-04-PLAN.md  02-04-SUMMARY.md  02-HUMAN-UAT.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/milestones/v1.0-phases/03-filesystem-power-tools/: 03-02-SUMMARY.md  03-03-PLAN.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-HUMAN-UAT.md  03-RESEARCH.md  03-VALIDATION.md
.planning/milestones/v1.0-phases/04-terminal-visuals/: 04-02-SUMMARY.md  04-03-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md  04-DISCUSSION-LOG.md  04-PATTERNS.md  04-REVIEW.md
.planning/milestones/v1.0-phases/05-windows-platform-integration/: 05-01-SUMMARY.md  05-DISCUSSION-LOG.md  05-HUMAN-UAT.md  05-PATTERNS.md  05-RESEARCH.md  05-VALIDATION.md
.planning/milestones/v2.0-phases/06-scriptable-core-foundation/: 06-01-SUMMARY.md  06-02-SUMMARY.md  06-CONTEXT.md  06-HUMAN-UAT.md  06-RESEARCH.md  06-REVIEW.md  06-VERIFICATION.md
.planning/milestones/v2.0-phases/07-spine-rollout/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-CONTEXT.md  07-REVIEW-FIX.md  07-VALIDATION.md
.planning/milestones/v2.0-phases/08-filesystem-depth/: 08-01-PLAN.md  08-01-SUMMARY.md  08-03-PLAN.md  08-03-SUMMARY.md  08-05-PLAN.md  08-05-SUMMARY.md  08-06-SUMMARY.md  (+6 more)
.planning/phases/01-foundation-flatten/: 01-01-PLAN.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md  SKELETON.md
.planning/phases/02-pure-transform-utilities/: 02-01-PLAN.md  02-02-PLAN.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-05-PLAN.md  02-05-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-HUMAN-UAT.md  02-PATTERNS.md  02-RESEARCH.md  02-REVIEW.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-filesystem-power-tools/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-05-PLAN.md  03-05-SUMMARY.md  03-HUMAN-UAT.md  03-PATTERNS.md  03-REVIEW.md  03-VERIFICATION.md
.planning/phases/04-terminal-visuals/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-03-PLAN.md  04-CONTEXT.md  04-RESEARCH.md  04-REVIEW.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/phases/05-windows-platform-integration/: 05-01-PLAN.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-04-PLAN.md  05-04-SUMMARY.md  05-CONTEXT.md  05-HUMAN-UAT.md  05-REVIEW.md  05-VALIDATION.md  05-VERIFICATION.md
.planning/phases/06-scriptable-core-foundation/: 06-01-PLAN.md  06-02-PLAN.md  06-DISCUSSION-LOG.md  06-PATTERNS.md  06-RESEARCH.md  06-VALIDATION.md  06-VERIFICATION.md
.planning/phases/07-spine-rollout/: 07-03-PLAN.md  07-03-SUMMARY.md  07-DISCUSSION-LOG.md  07-HUMAN-UAT.md  07-PATTERNS.md  07-RESEARCH.md  07-REVIEW.md  07-VERIFICATION.md
.planning/phases/08-filesystem-depth/: 08-01-PLAN.md  08-02-PLAN.md  08-02-SUMMARY.md  08-03-PLAN.md  08-04-PLAN.md  08-04-SUMMARY.md  08-06-PLAN.md  08-CONTEXT.md  08-RESEARCH.md  08-REVIEW.md  08-SECURITY.md  08-VALIDATION.md  08-VERIFICATION.md
.planning/phases/09-dev-transform-visual-depth/: 09-02-PLAN.md  09-02-SUMMARY.md  09-03-PLAN.md  09-03-SUMMARY.md  09-DISCUSSION-LOG.md  09-PATTERNS.md  09-RESEARCH.md  09-REVIEW.md  09-VALIDATION.md
.planning/phases/10-fun-system-depth/: 10-01-PLAN.md  10-01-SUMMARY.md  10-02-PLAN.md  10-02-SUMMARY.md  10-03-PLAN.md  10-04-PLAN.md  10-04-SUMMARY.md  10-05-PLAN.md  10-05-SUMMARY.md  10-06-SUMMARY.md  10-CONTEXT.md  10-DISCUSSION-LOG.md  10-PATTERNS.md  10-REVIEW.md
.planning/phases/11-meta-commands/: 11-01-PLAN.md  11-01-SUMMARY.md  11-02-PLAN.md  11-02-SUMMARY.md  11-03-PLAN.md  11-03-SUMMARY.md  11-DISCUSSION-LOG.md  11-HUMAN-UAT.md  11-REVIEW.md  11-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/: cli.rs  main.rs
src/commands/: mod.rs  stub.rs
src/commands/ascii/: mod.rs
src/commands/base64/: mod.rs
src/commands/bulk_rename/: mod.rs
src/commands/clip/: mod.rs
src/commands/color/: mod.rs
src/commands/completions/: mod.rs
src/commands/config/: mod.rs
src/commands/cowsay/: mod.rs
src/commands/du/: mod.rs
src/commands/dupes/: mod.rs
src/commands/eight_ball/: mod.rs
src/commands/epoch/: mod.rs
src/commands/flatten/: mod.rs  rename.rs
src/commands/fortune/: mod.rs
src/commands/hash/: mod.rs
src/commands/json/: mod.rs
src/commands/lolcat/: mod.rs
src/commands/matrix/: mod.rs
src/commands/passgen/: mod.rs
src/commands/pomodoro/: mod.rs
src/commands/qr/: mod.rs
src/commands/roast/: mod.rs
src/commands/tree/: mod.rs
src/commands/uuid/: mod.rs
src/commands/weather/: mod.rs
src/core/: cache.rs  config.rs  errors.rs  fs.rs  input.rs  mod.rs  output.rs
src/data/: roasts.txt
src/data/fortunes/: humor.txt  tech.txt  wisdom.txt
src/data/roasts/: javascript.txt  python.txt  rust.txt
tests/: ascii.rs  base64.rs  bulk_rename.rs  bulk_rename_backup.rs  cli.rs  clip.rs  color.rs  completions.rs  config.rs  config_cmd.rs  cowsay.rs  du.rs  dupes.rs  dupes_delete.rs  eight_ball.rs  epoch.rs  flatten.rs  flatten_move.rs  fortune.rs  hash.rs  json.rs  lolcat.rs  matrix.rs  passgen.rs  pomodoro.rs  qr.rs  roast.rs  tree.rs  uuid.rs  weather.rs
tests/cmd/: color.trycmd  cowsay-multi.trycmd  cowsay-single.trycmd  help.trycmd  json.trycmd  tree.trycmd
tests/fixtures/weather/: forecast_imperial.json  forecast_imperial_7day.json  forecast_metric.json  forecast_metric_7day.json  geocode_hit.json  geocode_no_match.json
(+18 files in other folders)
