[package]
name = "box"
version = "0.1.0"
edition = "2021"
description = "A Rust CLI toolbox — 23 command-line tools in one binary"

[[bin]]
name = "box"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.6", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
# Terminal
# `supports-colors` exposes the global `set_override`/`with_override` API used by
# core::output::init_color to gate color once at startup (D-10).
owo-colors = { version = "4.3", features = ["supports-colors"] }
enable-ansi-support = "0.3"
crossterm = "0.29"
# Config-file defaults (SPINE-05, D-1). Hand-roll: toml parse + dirs for %APPDATA%.
toml = "1.1.2"
dirs = "6.0.0"
# Directory walking
walkdir = "2.5"
# Path normalization (no \\?\ UNC leak)
dunce = "1.0"
# Phase-2 pure-transform crates (added once here so Wave-2 command plans never
# touch the manifest — D-01 lean bundle):
# `v4` auto-enables rng+std+getrandom; Display gives RFC-4122 lowercase-hyphenated.
# `v7` (UUID-V2-01) adds `Uuid::now_v7()` (time-ordered); the four wrapping forms
# (.hyphenated/.simple/.braced/.urn) are const fn and need NO feature.
uuid = { version = "1.23.3", features = ["v4", "v7"] }
# STANDARD + URL_SAFE_NO_PAD engines; zero transitive deps.
base64 = "0.22.1"
# default-features off trims oldtime/wasmbind; `clock` keeps `Local` (pulls
# iana-time-zone transitively); `std` for the rest of the API (D-01).
chrono = { version = "0.4.45", default-features = false, features = ["clock", "std"] }
# OsRng for passgen (CSPRNG) + rng() for the whimsy commands (D-08).
rand = "0.9"
blake3 = "1.8.5"
md-5 = "0.11.0"
rayon = "1.12.0"
sha2 = "0.11.0"
regex = "1.12.4"
base16ct = "1.0.0"
const-hex = "1.19.1"
# json (JSON-01 / D-04). `preserve_order` keeps input key order (`{"b":1,"a":2}`
# stays b-before-a, NOT alphabetized) — it pulls indexmap→hashbrown. serde comes
# transitively (Value needs no derive, so NO direct `serde` dep). `arbitrary_precision`
# is deliberately OFF: it breaks Value round-tripping / Display for numbers and is a
# known D-04 landmine (serde-rs/json #505/#721/#845).
serde_json = { version = "1.0.150", features = ["preserve_order"] }
# lolcat (LOL-01 / D-12/D-13). `unicode-width` gives per-Unicode-scalar display
# width so the gradient phase advances by width(c) (wide/CJK=2, combining=0), NOT
# per byte (D-12). `strip-ansi-escapes` removes ALL incoming ANSI before recolor —
# actions the standing STATE.md strip-ansi todo and is the T-04L-01 terminal-escape-
# injection mitigation (D-13). crossterm/owo-colors/enable-ansi-support already present.
unicode-width = "0.2"
strip-ansi-escapes = "0.2"
# ascii (ASCI-01 / D-01/D-02). The ONE sanctioned new crate — the image-decoding
# hand-roll exception. artem is REJECTED (D-01): its unconditional deps drag
# clap/colored/terminal_size/log/env_logger/once_cell/ureq and bypass our
# terminal_width() gate. `default-features = false` + ["png","jpeg"] trims the
# decoder set to exactly the two formats ASCI-01 needs (RESEARCH A2) — verified to
# resolve the full open→resize_exact→to_luma8 pipeline (fixture generator + build).
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg"] }
# qr (QR-01 / D-01/D-02). `default-features = false` drops qrcode's default
# ["image","svg","pic"] pull-in (this phase renders to the terminal, never an
# image file — `--save` is VIS-V2-01, out of scope). The
# `render::unicode::Dense1x2` half-block path is ALWAYS available with no feature
# (RESEARCH A2). qr2term REJECTED (D-01 — always emits ANSI, polarity in bg color).
qrcode = { version = "0.14.1", default-features = false }
# clip (CLIP-01 / D-06). `default-features = false` drops arboard's default
# `image-data` feature so it does NOT pull image/png/bmp + the extra
# windows-sys image deps — binary/image clipboard is Out of Scope (text only
# v1). `set_text`/`get_text` (the whole CLIP-01 surface) remain available with no
# feature (RESEARCH A2). arboard correctly converts UTF-8 ↔ UTF-16
# CF_UNICODETEXT via the Win32 API directly (compatible with +crt-static, no DLL
# / no async runtime) — the reason for bypassing clip.exe's Unicode mangling.
arboard = { version = "3.6.1", default-features = false }
# weather HTTP (WTHR-01 / D-13). Blocking HTTPS GET to Open-Meteo. Default
# features ["rustls","gzip"] → rustls means no OpenSSL / no system DLL (compatible
# with +crt-static), far smaller than reqwest+tokio (no async runtime; "What NOT
# to Use" rejects reqwest). The `json` feature is deliberately NOT enabled (D-13):
# deserialize via serde_json::from_reader over resp.into_body().into_reader() so we
# reuse the existing serde_json dep. Non-2xx is Err(Error::StatusCode) by default
# (status-as-error), so the non-2xx path is a match arm, not a resp.status() check
# (Pitfall WTHR-1).
ureq = "3.3.0"
# weather Deserialize derive (WTHR-01 / D-13). Only the `derive` macro is new —
# `serde_json` 1.0.150 is ALREADY a dep (above) and pulls serde transitively, but
# the Open-Meteo response structs need the `derive` feature for
# `#[derive(Deserialize)]`.
serde = { version = "1", features = ["derive"] }
# pomodoro toast (POMO-01 / D-09). The actively maintained drop-in fork of
# winrt-notification (this OVERRIDES CLAUDE.md's stack pick per D-09 — same
# `ToastNotificationManager` API, but modern `windows 0.61` vs the stale crate's
# abandoned `windows 0.24` + dead `syn 1.x`). `Toast::POWERSHELL_APP_ID` fires a
# toast with NO AUMID registration. Cargo only builds it on the msvc target
# (it brings windows 0.61 + quick-xml + windows-version). Fallback ladder if it
# ever fails to build (all hit the same WinRT API, swap localized to this module):
# winrt-notification 0.5.1 → winrt-toast-reborn 0.3.8 → PowerShell shell-out.
tauri-winrt-notification = "0.7.2"
# --- Phase 8 (filesystem depth) — all four added ONCE here so plans 08-02/08-03
# never touch the manifest (RESEARCH § Primary recommendation). ---
# Progress bars for hash/flatten (and later du/dupes). MUST draw to stderr and be
# hidden/skipped under --json (Pitfall 2). First real use of this CLAUDE.md-listed
# crate; consumed by 08-01 (hash/flatten) and 08-02/08-03.
indicatif = "0.18.4"
# tree --gitignore matcher (08-02) + du --exclude globset (08-02). Promoted from
# dev-only (transitive today via assert_fs→globwalk) to RUNTIME deps. BurntSushi,
# pure-Rust, +crt-static/PS7-clean (no DLL).
ignore = "0.4"
globset = "0.4"
# Win32: GetCompressedFileSizeW (du --on-disk, 08-02) + GetFileInformationByHandle
# (dupes hardlink identity, 08-03). Pin 0.61 to UNIFY with the transitive
# windows ^0.61 from tauri-winrt-notification 0.7.2 (D-2) — `cargo tree -i windows`
# must stay a single 0.61.x. Only the two feature modules these calls need; the
# std handle fields (file_index/volume_serial) are nightly-only (issue #63010), so
# the stable path is this Win32 binding (RESEARCH HIGH-IMPACT correction).
windows = { version = "0.61", features = ["Win32_Storage_FileSystem", "Win32_Foundation"] }
# NOTE: no `rand_core` yet — verify `use rand::TryRngCore` resolves through rand
# 0.9 re-exports during the passgen plan (RESEARCH A1); not needed here.
# NOTE: no `filetime` — use std::fs::FileTimes (Rust 1.75+).
# NOTE: no `is-terminal` — use std::io::IsTerminal (Rust 1.70+).

[dev-dependencies]
assert_cmd = "2.2"
predicates = "3.1"
assert_fs = "1.1"
tempfile = "3.27"
trycmd = "1.2"
insta = "1.48"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
opt-level = 3
